--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -1,6 +1,6 @@
 <!-- Info Bar -->
 <div class="info-bar text-center">
-  🐞 ¿Has encontrado un bug? <a href="#">Reportar error</a>
+ Mo0nLite 🐞 ¿Has encontrado un bug? <a href="#">Reportar error</a>
 </div>
 
 <!-- Top Bar -->
